--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.2.0",
     "react-markdown": "^8.0.7",
     "react-simple-chatbot": "^0.6.1",
+    "remark-gfm": "^3.0.1",
     "styled-components": "^6.0.7",
     "uuid": "^9.0.0"
   },
